add a new plugin-test-util module containing a base class that can be subclassed by any plugin writing plugin-test-api based integration tests; refactor the as5 plugin and as7 plugin itests to use the new module; add support for starting/stopping an AS5 instance for itests to the as5 plugin pom (currently AS 6.0 and 6.1 are supported - still need to add support for EAP 5.0.x and EAP 5.1.x)